# ArrowHouse

./: .gitmodules  AggregationCommon.h  Aggregator.cpp  Aggregator.h  CMakeLists.txt  arrow_clickhouse_types.h  build_arrow.sh  ut_aggregator.cpp
AggregateFunctions/: AggregateFunctionAvg.h  AggregateFunctionCount.h  AggregateFunctionMinMaxAny.h  AggregateFunctionSum.h  AggregateFunctionWrapper.h  IAggregateFunction.cpp  IAggregateFunction.h
Columns/: CMakeLists.txt  ColumnAggregateFunction.cpp  ColumnAggregateFunction.h  ColumnsCommon.cpp  ColumnsCommon.h  ColumnsHashing.h  ColumnsHashingImpl.h
Common/: Allocator.cpp  Allocator.h  Allocator_fwd.h  Arena.h  BitHelpers.h  CMakeLists.txt  ConcurrentBoundedQueue.h  Defines.h  Dwarf.cpp  Dwarf.h  Elf.cpp  Elf.h  Exception.cpp  Exception.h  MemorySanitizer.h  PODArray.cpp  PODArray.h  PODArray_fwd.h  Priority.h  SipHash.h  SortDescription.h  StackTrace.cpp  StackTrace.h  StringUtils.cpp  StringUtils.h  SymbolIndex.cpp  SymbolIndex.h  TypePromotion.h  UUID.cpp  UUID.h  memcpySmall.h  projection.cpp  projection.h  randomSeed.cpp  transformEndianness.h  typeid_cast.h
Common/HashTable/: FixedHashMap.h  FixedHashTable.h  Hash.h  HashMap.h  HashSet.h  HashTable.h  HashTableAllocator.h  HashTableKeyHolder.h  StringHashMap.h  StringHashTable.h
DataStreams/: AggregatingBlockInputStream.cpp  AggregatingBlockInputStream.h  BlocksListBlockInputStream.h  CMakeLists.txt  CheckSortedBlockInputStream.cpp  ConcatBlockInputStream.h  FilterColumnsBlockInputStream.cpp  FilterColumnsBlockInputStream.h  GuardedBlockOutputStream.h  IBlockInputStream.cpp  IBlockInputStream.h  IBlockOutputStream.h  IBlockStream_fwd.h  MergeSortingBlockInputStream.cpp  MergeSortingBlockInputStream.h  MergingAggregatedBlockInputStream.cpp  MergingAggregatedBlockInputStream.h  NullBlockInputStream.h  NullBlockOutputStream.h  OneBlockInputStream.h  ParallelInputsProcessor.h  ParallelInputsSink.h  ParquetBlockInputStream.cpp  ParquetBlockInputStream.h  ReverseBlockInputStream.cpp  ReverseBlockInputStream.h  UnionBlockInputStream.h
DataStreams/tests/: gtest_streams_smoke.cpp
Functions/: CMakeLists.txt  FunctionsHashing.h
Functions/tests/: gtest_hashes_smoke.cpp
IO/: BufferBase.h  BufferWithOwnMemory.h  CompressedReadBufferWrapper.h  CompressionMethod.cpp  CompressionMethod.h  DoubleConverter.cpp  DoubleConverter.h  MMapReadBufferFromFile.cpp  MMapReadBufferFromFile.h  MMapReadBufferFromFileDescriptor.cpp  MMapReadBufferFromFileDescriptor.h  MMappedFileDescriptor.cpp  MMappedFileDescriptor.h  Operators.h  ReadBuffer.cpp  ReadBuffer.h  ReadBufferFromFileBase.cpp  ReadBufferFromFileBase.h  ReadBufferFromFileDecorator.cpp  ReadBufferFromFileDecorator.h  ReadBufferFromFileDescriptor.cpp  ReadBufferFromFileDescriptor.h  ReadBufferFromMemory.cpp  ReadBufferFromMemory.h  ReadBufferFromString.h  ReadBufferWrapperBase.h  ReadHelpers.cpp  ReadHelpers.h  SeekableReadBuffer.cpp  SeekableReadBuffer.h  VarInt.cpp  VarInt.h  WithFileName.cpp  WithFileName.h  WithFileSize.cpp  WithFileSize.h  WriteBuffer.h  WriteBufferFromFileBase.cpp  WriteBufferFromFileBase.h  WriteBufferFromFileDescriptor.cpp  (+12 more)
Interpreters/: AggregateDescription.h  Aggregator.cpp  Aggregator.h  Context.h
Parsers/: IAST_fwd.h  IParser.h  Lexer.h  TokenIterator.h  parseQuery.h
YdbModes/: CMakeLists.txt  CheckSortedBlockInputStream.cpp  CheckSortedBlockInputStream.h  CompositeKey.h  ExpressionBlockInputStream.cpp  ExpressionBlockInputStream.h  MergingSortedInputStream.cpp  MergingSortedInputStream.h  ReplaceKey.h  ReplaceSortDescription.h  SortCursor.h  SortDescription.h  SortingBlockInputStream.cpp  SortingBlockInputStream.h  SsaProgram.cpp  SsaProgram.h  helpers.cpp  helpers.h  switch_type.h  ut_modes.cpp
YdbModes/tests/: ut_modes.cpp  ut_ssa_step.cpp
base/: CMakeLists.txt
base/common/: CMakeLists.txt  StringRef.h  UUID.h  arithmeticOverflow.h  demangle.cpp  extended_types.h  getPageSize.cpp  getPageSize.h  hex.h  itoa.cpp  itoa.h  shift10.cpp  shift10.h  types.h  unaligned.h  wide_integer.h  wide_integer_impl.h
contrib/: CMakeLists.txt
contrib/double-conversion-cmake/: CMakeLists.txt
contrib/dragonbox-cmake/: CMakeLists.txt
contrib/fast_float-cmake/: CMakeLists.txt
contrib/fmtlib-cmake/: CMakeLists.txt
contrib/googletest-cmake/: CMakeLists.txt
contrib/libunwind-cmake/: CMakeLists.txt
contrib/wyhash-cmake/: CMakeLists.txt
contrib/xxHash-cmake/: CMakeLists.txt
programs/: CMakeLists.txt  main.cpp
programs/benchmark/: Benchmark.cpp
programs/local/: CMakeLists.txt  LocalServer.cpp  LocalServer.h
tests/: ut_aggregator.cpp
